Fix issue with invisible palette

--- a/css/palette.css
+++ b/css/palette.css
@@ -23,6 +23,7 @@
 .palette:not(.visible) {
 	transform: translateY(5px);
 	opacity: 0;
+	pointer-events: none;
 }
 
 /* palette input */
